# jihaz

./: .gitignore  Cargo.toml
jihaz/: Cargo.toml
jihaz-app/: Cargo.toml
jihaz-app/src/: app.rs  app_helpers.rs  app_message.rs  deferred.rs  lib.rs  progress.rs  simple_task.rs
jihaz-app/src/view/: button_action.rs  mod.rs  special_button.rs  tablet.rs  textbox.rs  window.rs
jihaz-app/src/view/sequence/: mod.rs  tablet_of_views.rs
jihaz-app/src/widget/: local_widget_mut.rs  mod.rs  special_button.rs  tablet.rs  textbox.rs  window.rs
jihaz-composer/: Cargo.toml
jihaz-composer/src/: char_buffer.rs  chars.rs  encoding.rs  indent.rs  lib.rs  line_ending.rs  register.rs  selection.rs  syntax_util.rs  word.rs
jihaz-composer/src/buffer/: rope_text.rs
jihaz-deferred/: Cargo.toml
jihaz-deferred/src/: icons.rs  lib.rs  message.rs  message_receiver.rs  plist.rs
jihaz-macros/: Cargo.toml
jihaz-macros/src/: bits.rs  directory.rs  lib.rs  util.rs
jihaz-primal/: Cargo.toml
jihaz-primal/src/: bits.rs  error.rs  file_man.rs  lib.rs  path_and_str.rs  pathbuf_to_string.rs  serde.rs
jihaz-primal/src/range/: categorical.rs  change.rs  mod.rs  remained.rs  tests.rs
jihaz/src/: bits.rs  collection.rs  lib.rs  scraper.rs  string.rs
jihaz/src/backend/: mod.rs
jihaz/src/backend/gtk/: application.rs  clipboard.rs  error.rs  mod.rs  util.rs
jihaz/src/backend/mac/: clipboard.rs  error.rs  mod.rs  sys_task_handle.rs  util.rs
jihaz/src/backend/wayland/: clipboard.rs  error.rs  mod.rs  sys_task_handle.rs
jihaz/src/backend/web/: clipboard.rs  error.rs  mod.rs  sys_task_handle.rs
jihaz/src/backend/windows/: clipboard.rs  error.rs  mod.rs  sys_task_handle.rs  util.rs
jihaz/src/backend/x11/: application.rs  clipboard.rs  error.rs  mod.rs
jihaz/src/convert/: arc_rc.rs  mod.rs  multi.rs  round_to_decimal.rs  vello.rs
jihaz/src/sys_task/: clipboard.rs  error.rs  handle.rs  mod.rs  thread_util.rs
jihaz/src/time/: date.rs  date_time_full.rs  mod.rs  time.rs  time_date.rs
xilem-plus-for-jihaz/: Cargo.toml
xilem-plus-for-jihaz/src/: core.rs  lib.rs  theme.rs
xilem-plus-for-jihaz/src/preferences/: mod.rs
xilem-plus-for-jihaz/src/preferences/text/: cow_font.rs  cow_style.rs  cow_styles.rs  language.rs  mod.rs  serde_style.rs  serde_styles.rs  serde_text_related.rs  text_related.rs
xilem-plus-for-jihaz/src/view/: action_button.rs  convenience_views.rs  debug.rs  dyn_style_label.rs  either_or.rs  font_preview.rs  message_result.rs  mod.rs  one_of_many.rs  oversee.rs  preferences.rs
xilem-plus-for-jihaz/src/widget/: debug.rs  dyn_style_button.rs  dyn_style_label.rs  either_or.rs  font_preview.rs  mod.rs  oversee.rs
