[workspace]
resolver = "2"
    # "jihaz-app",
members = [
    "jihaz-composer",
    "jihaz-deferred",
    "jihaz-macros",
    "jihaz-primal",
    "jihaz",
]

[workspace.lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(FALSE)',
    'cfg(tarpaulin_include)',
] }

[workspace.dependencies]
jihaz = { path = "./jihaz" }
jihaz-composer = { path = "./jihaz-composer" }
jihaz-deferred = { path = "./jihaz-deferred" }
jihaz-macros = { path = "./jihaz-macros" }
jihaz-primal = { path = "./jihaz-primal" }
# I've noticed that kurbo is used from vello in xilem, but used from penico in xilem_web.
# But really kurbo in vello is re-exported from the re-expored penico crate, so it doesn't really matter.
directories = "*"
kurbo = "0.11.0"
# serde = { version = "1.0.136", features = ["derive"] }
serde = "1.0"
serde_json = "1.0.68"
tracing = {version = "0.1.40", default-features = false}

# [workspace.dependencies.tracing]
# git = "https://github.com/tokio-rs/tracing"
# rev = "c14525e1610db88986f849d46bd3e9795878b012"
# package = "tracing"

# [workspace.dependencies.tracing-subscriber]
# git = "https://github.com/tokio-rs/tracing"
# rev = "c14525e1610db88986f849d46bd3e9795878b012"
# package = "tracing-subscriber"

# [workspace.dependencies.tracing-appender]
# git = "https://github.com/tokio-rs/tracing"
# rev = "c14525e1610db88986f849d46bd3e9795878b012"
# package = "tracing-appender"

[profile.release-lto]
inherits      = "release"
lto           = true
codegen-units = 1

# A profile which compiles all (non-workspace) dependencies in release mode
# but Tarteel code in dev mode. This gives a good debugging experience for your
# code and fast performance of other people's code. After the initial
# build subsequent ones are as fast as dev mode builds.
# See https://doc.rust-lang.org/cargo/reference/profiles.html
# To use this profile:
#   cargo build --profile fastdev
#   cargo run --profile fastdev --bin tarteel
[profile.fastdev.package."*"]
opt-level = 3

[profile.fastdev]
inherits = "dev"